fix sideBar overflow

--- a/src/assets/styles/components/sideBarInfo.css
+++ b/src/assets/styles/components/sideBarInfo.css
@@ -8,6 +8,7 @@
     margin-right: 2%;
     border-radius: 10px;
     padding: 1% 1% 1% 1%;
+    overflow: auto;
 }
 
 .labelsContainer {
